--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Module 4 Demonstration</h1>
+    <h1>Module 4 Excellent</h1>
     <hr>
     <select onchange="MenuChoice()" id="menu">
         <option>Please select an Option</option>
